Login e registro de acordo com a ROLE do usuario vai para a pagina designada